[package]
name = "signal-hook"
version = "0.3.17"
authors = [
    "Michal 'vorner' Vaner <vorner@vorner.cz>",
    "Thomas Himmelstoss <thimm@posteo.de>",
    "P. Todd Decker <ptdecker@mac.com>"
]
description = "SIGINT signal handling"
readme = "README.md"
keywords = ["signal", "unix", "daemon"]
license = "MIT"
edition = "2018"

[features]
channel = []
default = ["channel", "iterator"]
iterator = ["channel"]
# TODO: Unify them on the next breaking release.
extended-siginfo = ["channel", "iterator", "extended-siginfo-raw"]
extended-siginfo-raw = ["cc"]

[dependencies]
libc = "^0.2"
signal-hook-registry = { version = "^1.4", path = "signal-hook-registry" }

[dev-dependencies]
serial_test = "3.1.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[build-dependencies]
cc = { version = "^1", optional = true }
